--- a/index.html
+++ b/index.html
@@ -204,5 +204,85 @@
         </div>
     </div>
     <!-- end Aboutus -->
+
+    <!-- start Achievements -->
+    <div class="Achievements" id="Achievements">
+        <div class="main-heading">
+            <h2>نادي قرية العليا السعودي</h2>
+        </div>
+        <div class="container">
+            <div class="Achiev">
+                <h2>35</h2>
+                <h3>بطولة</h3>
+            </div>
+            <div class="Achiev">
+                <h2>109</h2>
+                <h3>جائزة</h3>
+            </div>
+            <div class="Achiev">
+                <h2>43</h2>
+                <h3>ميدالية</h3>
+            </div>
+        </div>
+    </div>
+    <!-- end Achievements -->
+    
+    <!-- start vido -->
+    <div class="video">
+        <video autoplay muted loop>
+            <source src="images/video.mp4" type="video/mp4">
+        </video>
+        <div class="text">
+            <h3>نادي قرية العليا السعودي</h3>
+            <p>احتفال وفرح الاعبين بعد الفوز في احدى المباريات</p>
+        </div>
+    </div>
+    <!-- end vido -->
+
+    <!-- start contactus -->
+    <div class="contactus">
+        <div class="container">
+            <div class="text">
+                <h3>إشترك في النشرة البريدية ليصلك كل جديدنا</h3>
+            </div>
+            <form action="">
+                <input type="email" name="mail" placeholder="Your Email">
+                <input type="submit" value="Subscribe">
+            </form>
+        </div>
+    </div>
+    <!-- end contactus -->
+
+    <!-- start footer -->
+    <div class="footer">
+        <div class="container">
+            <div class="text">
+                <div class="qau">
+                    <h1>نادي قرية العليا السعودي</h1>
+                </div>
+                <ul class="men">
+                    <li>نادي محافظة قرية العليا الرياضي</li>
+                    <li>نادي رياضي تأسس عام 1975 م</li>
+                    <li>يشمل الكثير من الانشطة الشبابية والرياضية</li>
+                </ul>
+                <div class="such">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fas fa-home"></i>
+                    <i class="fab fa-linkedin"></i>
+                </div>
+            </div>
+            <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11254.533458744785!2d47.71849388703756!3d27.57452473133933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3fcd9e23ddc4e6cf%3A0x4abe5406e3712485!2z2YbYp9iv2Yog2YLYsdmK2Kkg2KfZhNi52YTZitinINin2YTYsdmK2KfYttmK!5e1!3m2!1sar!2ssa!4v1698343946190!5m2!1sar!2ssa" width="486" height="255" style="border:2;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <ul class="dvlop">
+                <h5>Developere</h5>
+                <li>Design % Coding by</li>
+                <li>Ali M AL-Homily</li>
+                <li>جميع الحقوق محفوضة لنادي قرية العليا الرياضي© </li>
+            </ul>
+        </div>
+    </div>
+    <!-- end footer -->
 </body>
 </html>
