--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <!-- end vido -->
 
     <!-- start contactus -->
-    <div class="contactus">
+    <div class="contactus" id="contactus">
         <div class="container">
             <div class="text">
                 <h3>إشترك في النشرة البريدية ليصلك كل جديدنا</h3>
