--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <!-- start Achievements -->
     <div class="Achievements" id="Achievements">
         <div class="main-heading">
-            <h2>نادي قرية العليا السعودي</h2>
+            <h2>إنجازات النادي</h2>
         </div>
         <div class="container">
             <div class="Achiev">
@@ -258,16 +258,7 @@
         <div class="container">
             <div class="p-3 rounded" style=" dir=rtl">
                 <p align="center"><img src="images/logo.png" width="100"></p>
-                <p align="center" style="font-size:22px">مبارات نادي قرية العليا</p>    
-                <div id="fixtures" style="text-align:center">
-                    <select size="1" name="statusgo" style="padding-right:3px;padding-left:3px;height:30px;border:0px solid black;background-color:#85153f;color:#85153f" >
-                        <h3 selected="" value="0">المباريات القادمة</h3>
-                    </select>
-                        &nbsp;
-                    <select size="1" name="degreego" style="padding-right:3px;padding-left:3px;height:30px;border:0px solid black;background-color:#85153f;color:#85153f" >
-                        <h3 selected="" value="0">المباريات القادمة</h3>
-                    </select>
-                </div>
+                <p align="center" style="font-size:22px">مباريات نادي قرية العليا الرياضي في دوري الدرجة الثالثة للعام 2023-2024</p>    
                 <br>
                 <div class="d-none d-lg-block">
                     <div class="row m-0 justify-content-right align-items-center" style="text-align:center">
