--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
                 </ul>
                 <div class="such">
                     <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-twitter"></i>
+                    <a href="#" target="_blank" title="go to twitter"><i class="fab fa-twitter"></i></a>
                     <i class="fas fa-home"></i>
                     <i class="fab fa-linkedin"></i>
                 </div>
@@ -906,7 +906,7 @@
             <ul class="dvlop">
                 <h5>Developere</h5>
                 <li>Design % Coding by</li>
-                <li>Ali M AL-Homily</li>
+                <li><a href="tel:+966558672165" title="الاتصال بالمصمم">Ali M AL-homily</a></li>
                 <li>جميع الحقوق محفوضة لنادي قرية العليا الرياضي© </li>
             </ul>
         </div>
