--- a/index.html
+++ b/index.html
@@ -894,10 +894,10 @@
                     <li>يشمل الكثير من الانشطة الشبابية والرياضية</li>
                 </ul>
                 <div class="such">
-                    <i class="fab fa-facebook-f"></i>
-                    <a href="#" target="_blank" title="go to twitter"><i class="fab fa-twitter"></i></a>
-                    <i class="fas fa-home"></i>
-                    <i class="fab fa-linkedin"></i>
+                    <a href=""><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.twitter.com/qaclub386?lang=ar" target="_blank" title="go to twitter"><i class="fab fa-twitter"></i></a>
+                    <a href=""><i class="fas fa-home"></i></a>
+                    <a href=""><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
             <div class="map">
@@ -905,12 +905,18 @@
             </div>
             <ul class="dvlop">
                 <h5>Developere</h5>
-                <li>Design % Coding by</li>
+                <li>Design &amp; Coding by</li>
                 <li><a href="tel:+966558672165" title="الاتصال بالمصمم">Ali M AL-homily</a></li>
-                <li>جميع الحقوق محفوضة لنادي قرية العليا الرياضي© </li>
             </ul>
         </div>
     </div>
     <!-- end footer -->
+    <!-- start we -->
+    <div class="me">
+        <div class="container">
+            <h2>جميع الحقوق محفوضة لنادي قرية العليا الرياضي</h2>
+        </div>
+    </div>
+    <!-- end we -->
 </body>
 </html>
