--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl" style="scrollbar-color: #85153f #f6eedf;">
+<html lang="ar" dir="rtl" style="scrollbar-color: #c74c79 #f6eedf;">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta name="description" content="">
@@ -9,7 +9,7 @@
     <meta http-equiv="refresh" content="1000">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#85153f">
+    <meta name="theme-color" content="#c74c79">
     <title>نادي قرية العليا السعودي</title>
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/normalize.css">
@@ -276,7 +276,7 @@
                         <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a>
                                     </td>
                                 </tr>
@@ -311,7 +311,7 @@
                         <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a>
                                     </td>
                                 </tr>
@@ -345,7 +345,7 @@
                         <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a>
                                     </td>
                                 </tr>
@@ -379,7 +379,7 @@
                         <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a>
                                     </td>
                                 </tr>
@@ -413,7 +413,7 @@
                         <table style="width:100%">
                         <tbody>
                             <tr>
-                                <td bgcolor="#85153f" align="center" >
+                                <td bgcolor="#c74c79" align="center" >
                                     <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a>
                                 </td>
                             </tr>
@@ -447,7 +447,7 @@
                          <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a>
                                     </td>
                                 </tr>
@@ -481,7 +481,7 @@
                          <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a>
                                     </td>
                                 </tr>
@@ -515,7 +515,7 @@
                         <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a></td>
                                 </tr>
                             </tbody>
@@ -548,7 +548,7 @@
                         <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a>
                                     </td>
                                 </tr>
@@ -582,7 +582,7 @@
                         <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a>
                                     </td>
                                 </tr>
@@ -616,7 +616,7 @@
                          <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a>
                                     </td>
                                 </tr>
@@ -650,7 +650,7 @@
                         <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a>
                                     </td>
                                 </tr>
@@ -684,7 +684,7 @@
                         <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a></td>
                                 </tr>
                             </tbody>
@@ -717,7 +717,7 @@
                         <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a></td>
                                 </tr>
                             </tbody>
@@ -750,7 +750,7 @@
                         <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a></td>
                                     </tr>
                             </tbody>
@@ -784,7 +784,7 @@
                         <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a>
                                     </td>
                                     </tr>
@@ -818,7 +818,7 @@
                         <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a></td>
                                 </tr>
                             </tbody>
@@ -852,7 +852,7 @@
                         <table style="width:100%">
                             <tbody>
                                 <tr>
-                                    <td bgcolor="#85153f" align="center" >
+                                    <td bgcolor="#c74c79" align="center" >
                                         <a href="" >الدوري السعودي لأندية الدرجة الثالثة</a>
                                     </td>
                                 </tr>
