--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
             <ul class="dvlop">
                 <h5>Developere</h5>
                 <li>Design &amp; Coding by</li>
-                <li><a href="tel:+966558672165" title="الاتصال بالمصمم">Ali M AL-homily</a></li>
+                <li><a href="https://api.whatsapp.com/send/?phone=%2B966558672165&text&type=phone_number&app_absent=0" title="الاتصال بالمصمم" target="_blank">Ali M AL-homily</a></li>
             </ul>
         </div>
     </div>
