--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                             </tbody>
                         </table>
                         <table style="width:100%">
-                            <tbody>
+                        <tbody>
                                 <tr>
                                     <td colspan="2" align="right">&nbsp;</td>
                                 </tr>
@@ -873,7 +873,169 @@
                                 </tr>
                             </tbody>
                         </table>
+                        <br>
+                        <br>
 
+                        <table border="0" class="table-striped" style="width:100%;table-layout:fixed">
+                            <thead>
+                                <tr class="bg-green text-white" style="background-color:rgb(199, 76, 121);">
+                                    <th style="width:20px"></th>
+                                    <th style="width:20px"></th>
+                                    <th style="width:30px"></th>
+                                    <th style="width:90px"></th>
+                                    <th style="text-align:center">لعب</th>
+                                    <th style="text-align:center">فاز</th>
+                                    <th style="text-align:center">تعادل</th>
+                                    <th style="text-align:center">خسر</th>
+                                    <th class="d-none d-sm-table-cell" style="text-align:center">له</th>
+                                    <th class="d-none d-sm-table-cell" style="text-align:center">عليه</th>
+                                    <th style="text-align:center">فارق</th>
+                                    <th style="text-align:center">نقاط</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td style="padding:0px;text-align:center"><i class="fa fa-circle" style="color:#146F45" aria-hidden="true"></i>&nbsp;</td>
+                                    <td style="padding:0px;text-align:center">1</td>
+                                    <td style="text-align:center"><a href="team.php?id=165" style=""><img src="images/logo008.png" alt="" width="30"></a></td>
+                                    <td style="text-align:center"><a href="team.php?id=165" style="">شرورة</a></td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">0</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">3</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">2</td>
+                                    <td style="text-align:center">+1</td>
+                                    <td style="text-align:center">3</td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:0px;text-align:center"></td>
+                                    <td style="padding:0px;text-align:center">2</td>
+                                    <td style="text-align:center"><a href="team.php?id=151" style="color:black"><img src="images/logo007.png" alt="" width="30"></a></td>
+                                    <td style="text-align:center"><a href="team.php?id=151" style="color:black">الخالدي</a></td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">0</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">2</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">1</td>
+                                    <td style="text-align:center">+1</td>
+                                    <td style="text-align:center">3</td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:0px;text-align:center"></td>
+                                    <td style="padding:0px;text-align:center">3</td>
+                                    <td style="text-align:center"><a href="team.php?id=137" style="color:black"><img src="images/logo005.png" alt="" width="30"></a></td>
+                                    <td style="text-align:center"><a href="team.php?id=137" style="color:black">الطرف</a></td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">0</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">2</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">1</td>
+                                    <td style="text-align:center">+1</td>
+                                    <td style="text-align:center">3</td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:0px;text-align:center"></td>
+                                    <td style="padding:0px;text-align:center">4</td>
+                                    <td style="text-align:center"><a href="team.php?id=13" style="color:black"><img src="images/logo003.png" alt="" width="30"></a></td>
+                                    <td style="text-align:center"><a href="team.php?id=13" style="color:black">الشرق</a></td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">0</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">1</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">0</td>
+                                    <td style="text-align:center">+1</td>
+                                    <td style="text-align:center">3</td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:0px;text-align:center"></td>
+                                    <td style="padding:0px;text-align:center">5</td>
+                                    <td style="text-align:center"><a href="team.php?id=87" style="color:black"><img src="images/logo.png" alt="" width="30"></a></td>
+                                    <td style="text-align:center"><a href="team.php?id=87" style="color:black">قرية العليا</a></td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">0</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">0</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">0</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">1</td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:0px;text-align:center"></td>
+                                    <td style="padding:0px;text-align:center">6</td>
+                                    <td style="text-align:center"><a href="team.php?id=77" style="color:black"><img src="images/logo002.png" alt="" width="30"></a></td>
+                                    <td style="text-align:center"><a href="team.php?id=77" style="color:black">الثقبة</a></td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">0</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">0</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">0</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">1</td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:0px;text-align:center"></td>
+                                    <td style="padding:0px;text-align:center">7</td>
+                                    <td style="text-align:center"><a href="team.php?id=154" style="color:black"><img src="images/logo009.png" alt="" width="30"></a></td>
+                                    <td style="text-align:center"><a href="team.php?id=154" style="color:black">حقل</a></td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">1</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">2</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">3</td>
+                                    <td style="text-align:center">-1</td>
+                                    <td style="text-align:center">0</td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:0px;text-align:center"></td>
+                                    <td style="padding:0px;text-align:center">8</td>
+                                    <td style="text-align:center"><a href="team.php?id=155" style="color:black"><img src="images/logo010.png" alt="" width="30"></a></td>
+                                    <td style="text-align:center"><a href="team.php?id=155" style="color:black">بيش</a></td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">1</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">1</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">2</td>
+                                    <td style="text-align:center">-1</td>
+                                    <td style="text-align:center">0</td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:0px;text-align:center"></td>
+                                    <td style="padding:0px;text-align:center">9</td>
+                                    <td style="text-align:center"><a href="team.php?id=80" style="color:black"><img src="images/logo004.png" alt="" width="30"></a></td>
+                                    <td style="text-align:center"><a href="team.php?id=80" style="color:black">الهدى</a></td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">1</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">1</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">2</td>
+                                    <td style="text-align:center">-1</td>
+                                    <td style="text-align:center">0</td>
+                                </tr>
+                                <tr>
+                                    <td style="padding:0px;text-align:center"><i class="fa fa-circle" style="color:#FF0000" aria-hidden="true"></i>&nbsp;</td>
+                                    <td style="padding:0px;text-align:center">10</td>
+                                    <td style="text-align:center"><a href="team.php?id=81" style="color:black"><img src="images/logo006.png" alt="" width="30"></a></td>
+                                    <td style="text-align:center"><a href="team.php?id=81" style="color:black">السلام</a></td>
+                                    <td style="text-align:center">1</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">0</td>
+                                    <td style="text-align:center">1</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">0</td>
+                                    <td class="d-none d-sm-table-cell" style="text-align:center">1</td>
+                                    <td style="text-align:center">-1</td>
+                                    <td style="text-align:center">0</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
